--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Style your header, navigation, content, footer, etc. here */
 body {
+  background-color: skyblue;
   font-family: sans-serif;
   margin: 0;
   padding: 0;
@@ -7,10 +8,26 @@ body {
 
 .header {
   background-color: #f1f1f1;
-  padding: 20px 0;
+  
+}
+
+.header-container {
+  background-color: fuchsia;
+  max-width: 800px;
+  margin: auto;
+  padding: 20px;
+}
+
+.header-navigation {
+  background-color: pink;
+  display: flex;
+  justify-content: end;
+  padding-right: 40px;
+  font-size: 1.2rem;
 }
 
 .container {
+  background-color: gray;
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
@@ -19,11 +36,15 @@ body {
 .navigation {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: end
 }
 
 .logo {
-  font-size: 1.5rem;
+  display: flex;
+  margin-top: 80px;
+  margin-bottom: 0;
+  justify-content: center;
+  font-size: 3rem;
   font-weight: bold;
 }
 
@@ -72,6 +93,11 @@ body {
 
 .footer {
   background-color: #f1f1f1;
-  padding: 10px 0;
+  padding-bottom:20px;
   text-align: center;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+
+  
 }
