--- a/style.css
+++ b/style.css
@@ -93,9 +93,9 @@ body {
 
 .footer {
   background-color: #f1f1f1;
-  padding-bottom:20px;
+  padding:10px;
   text-align: center;
-  position: fixed;
+  margin-top: 0;
   bottom: 0px;
   width: 100%;
 
